--- a/book-service-prod.properties
+++ b/book-service-prod.properties
@@ -28,4 +28,4 @@ spring.jpa.properties.hibernate.format_sql=true
 
 spring.datasource.hikari.maximum-pool-size=30
 spring.datasource.hikari.connection-timeout=6000
-application.dark.theme=black
+application.theme.color=black
